[tool.poetry]
name = "nework-rag"
version = "0.1.0"
description = ""
authors = ["ozgur gundogan <ozgur@thedoor.social>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
node2vec = "^0.5.0"
faker = "^33.1.0"
pandas = "^2.2.3"
faiss-cpu = "^1.9.0.post1"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
